update linearRegression Classifier

--- a/Classifiers/LogisticRegression.ipynb
+++ b/Classifiers/LogisticRegression.ipynb
@@ -2,75 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "from sklearn import datasets\n",
     "from sklearn.model_selection import train_test_split\n",
     "import pandas as pd\n",
-    "from sklearn import preprocessing\n"
+    "from sklearn import preprocessing\n",
+    "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "logmodel=LogisticRegression()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MyLogisticRegression:\n",
-    "    def __init__(self, lr=0.01, num_iter=100000):\n",
-    "        self.lr = lr\n",
-    "        self.num_iter = num_iter\n",
-    "        \n",
-    "    \n",
-    "    def __sigmoid(self, z):\n",
-    "        return 1 / (1 + np.exp(-z))\n",
-    "    \n",
-    "    def __loss(self, h, y):\n",
-    "        return (-y * np.log(h) - (1 - y) * np.log(1 - h)).mean()\n",
-    "    \n",
-    "    def fit(self, X, y):\n",
-    "        # weights initialization\n",
-    "        self.theta = np.zeros(X.shape[1])\n",
-    "        # Run Gradient Descent\n",
-    "        for i in range(self.num_iter):\n",
-    "            z = np.dot(X, self.theta)\n",
-    "            h = self.__sigmoid(z)\n",
-    "            gradient = np.dot(X.T, (h - y)) / y.size\n",
-    "            self.theta -= self.lr * gradient\n",
-    "            \n",
-    "            z = np.dot(X, self.theta)\n",
-    "            h = self.__sigmoid(z)\n",
-    "            loss = self.__loss(h, y)\n",
-    "           # print(loss)\n",
-    "            \n",
-    "            \n",
-    "    def predict_prob(self, X):\n",
-    "        return self.__sigmoid(np.dot(X, self.theta))\n",
-    "    \n",
-    "    def predict(self, X):\n",
-    "        return self.predict_prob(X).round()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('../Dataset/HeartDisease.csv')\n",
-    "df['HeartDisease'].unique()\n",
-    "label_encoder = preprocessing.LabelEncoder()\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "df['HeartDisease'].unique()\n",
+    "label_encoder = preprocessing.LabelEncoder()\n",
     "df['HeartDisease'].unique()\n",
     "df['Sex'].unique()\n",
     "df['Sex']=label_encoder.fit_transform(df['Sex'])\n",
@@ -86,105 +52,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0, 1], dtype=int64)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X=df.drop([\"HeartDisease\"],axis=1)\n",
-    "target_values = df['HeartDisease'].unique()\n",
-    "y=np.array(df['HeartDisease'])\n",
-    "df['HeartDisease'].unique()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_list = []\n",
-    "for i in range(0 , len(target_values)):\n",
-    "    y_list.append((y != i) * 1)\n",
-    "    "
+    "X=df.drop([\"HeartDisease\"],axis=1)\n",
+    "y=np.array(df['HeartDisease'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.25,random_state=1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_23464\\1344257422.py:11: RuntimeWarning: divide by zero encountered in log\n",
-      "  return (-y * np.log(h) - (1 - y) * np.log(1 - h)).mean()\n",
-      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_23464\\1344257422.py:11: RuntimeWarning: invalid value encountered in multiply\n",
-      "  return (-y * np.log(h) - (1 - y) * np.log(1 - h)).mean()\n",
-      "C:\\Users\\DELL\\AppData\\Local\\Temp\\ipykernel_23464\\1344257422.py:8: RuntimeWarning: overflow encountered in exp\n",
-      "  return 1 / (1 + np.exp(-z))\n"
+      "c:\\Users\\DELL\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  n_iter_i = _check_optimize_result(\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression()</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression()</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "LogisticRegression()"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model_lists = []\n",
-    "for i in range(0, len(y_list)):\n",
-    "    model = MyLogisticRegression(lr=0.1, num_iter=3000)\n",
-    "    model.fit(X, y_list[i])\n",
-    "    model_lists.append(model)\n"
+    "logmodel.fit(X_train , y_train)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred= logmodel.predict(X_test)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0\n",
-      "0.0\n"
+      "Accuracy: 0.8304347826086956\n",
+      "recall: 0.8439716312056738\n",
+      "Precision: 0.875\n",
+      "F1_Score: 0.8592057761732851\n"
      ]
     }
    ],
    "source": [
-    "Z=np.array([60,1,3,150,130,1,1,120,1,2,1])\n",
+    "acc=accuracy_score(y_test, y_pred)\n",
+    "recall= recall_score(y_test, y_pred)\n",
+    "precision=precision_score(y_test, y_pred)\n",
+    "f1=f1_score(y_test, y_pred)\n",
+    "print('Accuracy:',acc)\n",
+    "print('recall:',recall)\n",
+    "print('Precision:',precision)\n",
+    "print('F1_Score:',f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix:\n",
+      "[[ 72  17]\n",
+      " [ 22 119]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "CM = confusion_matrix(y_test, y_pred)\n",
     "\n",
-    "for j in range(0 , len(model_lists)):\n",
-    "    preds = model_lists[j].predict(Z)\n",
-    "    print(preds)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0\n",
-      "2.7151875577022445e-83\n"
-     ]
-    }
-   ],
-   "source": [
-    "for j in range(0 , len(model_lists)):\n",
-    "    preds = model_lists[j].predict_prob(Z)\n",
-    "    print(preds)"
+    "print('Confusion Matrix:')\n",
+    "print(CM)"
    ]
   }
  ],
