--- a/Classifiers/SVM.ipynb
+++ b/Classifiers/SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,24 +71,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "688\n",
+      "230\n"
+     ]
+    }
+   ],
    "source": [
     "Y = np.array(df['HeartDisease'])\n",
     "X_train, X_test, y_train, y_test = train_test_split (X, Y, test_size=0.25)# 25% mn eldata lltest\n",
     "#print(len(X_train))\n",
     "#print(len(X_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SVM.fit(X_train, y_train)\n",
-    "y_pred = SVM.predict(X_test)"
    ]
   },
   {
@@ -100,10 +99,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8565217391304348\n",
-      "Recall: 0.8512396694214877\n",
-      "Precision: 0.8728813559322034\n",
-      "F1_score: 0.8619246861924688\n"
+      "[1 0 1 1 1 0 0 1 0 1 0 1 1 1 0 0 0 1 0 1 1 1 0 0 1 1 0 1 0 0 0 0 1 1 1 1 1\n",
+      " 0 1 1 1 1 1 0 0 0 1 1 1 1 1 0 1 1 0 1 1 1 0 0 1 1 0 0 1 0 1 0 0 1 0 0 1 1\n",
+      " 1 1 1 1 1 0 1 0 0 0 1 0 1 1 1 1 1 1 1 0 0 1 0 0 0 1 0 0 1 1 1 1 1 1 1 1 1\n",
+      " 0 1 1 1 0 1 0 1 1 1 0 0 1 1 1 1 1 1 1 0 1 1 0 0 0 0 1 1 1 1 1 0 0 0 1 0 0\n",
+      " 1 0 1 1 0 0 1 1 1 1 1 1 0 1 0 1 0 0 1 0 1 1 1 1 0 1 1 1 1 1 0 1 1 1 0 0 1\n",
+      " 1 1 1 1 0 1 0 0 1 1 0 1 1 0 1 0 0 1 0 1 1 0 1 0 1 1 0 1 0 1 0 1 1 1 0 0 1\n",
+      " 1 1 0 0 1 0 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "SVM.fit(X_train, y_train)\n",
+    "y_pred = SVM.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.8304347826086956\n",
+      "Recall: 0.8222222222222222\n",
+      "Precision: 0.8809523809523809\n",
+      "F1_score: 0.8505747126436781\n"
      ]
     }
    ],
@@ -120,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -128,8 +151,8 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "[[ 94  15]\n",
-      " [ 18 103]]\n"
+      "[[ 80  15]\n",
+      " [ 24 111]]\n"
      ]
     }
    ],
@@ -156,7 +179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
