--- a/Classifiers/Knn1.ipynb
+++ b/Classifiers/Knn1.ipynb
@@ -266,7 +266,36 @@
    "source": [
     "from sklearn import metrics\n",
     "ac= metrics.accuracy_score(Y_test,y_pred)\n",
-    "print(ac)"
+    "print(ac)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.66      0.71      0.68       123\n",
+      "           1       0.75      0.71      0.73       153\n",
+      "\n",
+      "    accuracy                           0.71       276\n",
+      "   macro avg       0.70      0.71      0.70       276\n",
+      "weighted avg       0.71      0.71      0.71       276\n",
+      "\n",
+      "[[ 87  36]\n",
+      " [ 45 108]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from  sklearn.metrics  import classification_report ,confusion_matrix\n",
+    "print(classification_report(Y_test,y_pred))\n",
+    "print(confusion_matrix(Y_test,y_pred))\n"
    ]
   }
  ],
