--- a/Classifiers/LogisticRegression.ipynb
+++ b/Classifiers/LogisticRegression.ipynb
@@ -25,8 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../Dataset/HeartDisease.csv')\n",
-    "\n"
+    "df = pd.read_csv('../Dataset/HeartDisease.csv')"
    ]
   },
   {
@@ -169,7 +168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.11.1 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -183,9 +182,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.11.1"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "8e2a73f95a0b0781b2baad67e5bc7733078ec2aef527786c6422a708457daada"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
