--- a/Classifiers/SVM.ipynb
+++ b/Classifiers/SVM.ipynb
@@ -22,8 +22,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#read the data\n",
-    "df = pd.read_csv('../Dataset\\HeartDisease.csv')"
+    "# Import dataset\n",
+    "df = pd.read_csv('../Dataset/train.csv')\n",
+    "df_test = pd.read_csv('../Dataset/test.csv')"
    ]
   },
   {
@@ -32,29 +33,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#lable encooding\n",
-    "\n",
     "label_encoder = preprocessing.LabelEncoder()\n",
-    "\n",
-    "#for sex\n",
-    "df['Sex'].unique()\n",
-    "df['Sex']= label_encoder.fit_transform(df['Sex'])\n",
-    "\n",
-    "#for ChestPainType\n",
-    "df['ChestPainType'].unique()\n",
-    "df['ChestPainType']= label_encoder.fit_transform(df['ChestPainType'])\n",
-    "\n",
-    "#for RestingECG\n",
-    "df['RestingECG'].unique()\n",
-    "df['RestingECG']= label_encoder.fit_transform(df['RestingECG'])\n",
-    "\n",
-    "#for ExerciseAngina    #0--->false #1-->true\n",
-    "df['ExerciseAngina'].unique()\n",
-    "df['ExerciseAngina']= label_encoder.fit_transform(df['ExerciseAngina'])\n",
-    "\n",
-    "#for ST_Slope              #up-->2 #down-->0 #flat-->1\n",
-    "df['ST_Slope'].unique()\n",
-    "df['ST_Slope']= label_encoder.fit_transform(df['ST_Slope'])"
+    "df=df.drop(['project_id','name','desc','keywords','disable_communication'], axis = 1)\n",
+    "df['country'].unique()\n",
+    "df['currency'].unique()\n",
+    "# Encode labels in column 'species'.\n",
+    "df['country']= label_encoder.fit_transform(df['country'])\n",
+    "df['currency']= label_encoder.fit_transform(df['currency'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_encoder = preprocessing.LabelEncoder()\n",
+    "df_test=df_test.drop(['project_id','name','desc','keywords','disable_communication'], axis = 1)\n",
+    "df_test['country'].unique()\n",
+    "df_test['currency'].unique()\n",
+    "# Encode labels in column 'species'.\n",
+    "df_test['country']= label_encoder.fit_transform(df_test['country'])\n",
+    "df_test['currency']= label_encoder.fit_transform(df_test['currency'])"
    ]
   },
   {
@@ -64,7 +64,8 @@
    "outputs": [],
    "source": [
     "SVM=SVC(kernel=\"linear\")\n",
-    "X = df.drop(['HeartDisease'] , axis = 1)"
+    "X = df.drop(['final_status'] , axis = 1)\n",
+    "Y = df['final_status']"
    ]
   },
   {
@@ -73,10 +74,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Y = np.array(df['HeartDisease'])\n",
-    "X_train, X_test, y_train, y_test = train_test_split (X, Y, test_size=0.25)# 25% mn eldata lltest\n",
-    "#print(len(X_train))\n",
-    "#print(len(X_test))"
+    "\n",
+    "X_train , y_train  = X,Y\n",
+    "X_test, y_test =df_test.drop(['final_status'] , axis = 1),df['final_status']"
    ]
   },
   {
@@ -85,13 +85,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SVM.fit(X_train, y_train)\n",
-    "y_pred = SVM.predict(X_test)\n"
+    "SVM.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = SVM.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
