--- a/Classifiers/SVM.ipynb
+++ b/Classifiers/SVM.ipynb
@@ -34,7 +34,7 @@
    "outputs": [],
    "source": [
     "label_encoder = preprocessing.LabelEncoder()\n",
-    "df=df.drop(['project_id','name','desc','keywords','disable_communication'], axis = 1)\n",
+    "df=df.drop(['project_id','name','desc','keywords','disable_communication','backers_count'], axis = 1)\n",
     "df['country'].unique()\n",
     "df['currency'].unique()\n",
     "# Encode labels in column 'species'.\n",
@@ -76,7 +76,8 @@
    "source": [
     "\n",
     "X_train , y_train  = X,Y\n",
-    "X_test, y_test =df_test.drop(['final_status'] , axis = 1),df['final_status']"
+    "X_test=df_test.drop(['final_status'], axis = 1)\n",
+    "y_test =df_test['final_status']"
    ]
   },
   {
