--- a/Classifiers/SVM.ipynb
+++ b/Classifiers/SVM.ipynb
@@ -13,7 +13,11 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score, recall_score, precision_score, f1_score\n",
     "from sklearn import preprocessing\n",
-    "from sklearn.metrics import confusion_matrix"
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "import cv2\n",
+    "import os"
    ]
   },
   {
@@ -22,9 +26,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import dataset\n",
-    "df = pd.read_csv('../Dataset/train.csv')\n",
-    "df_test = pd.read_csv('../Dataset/test.csv')"
+    "\n",
+    "Categories=['benign','malignant']\n",
+    "flat_data_arr=[] #input array\n",
+    "target_arr=[] #output array\n",
+    "flat_data_arr_test=[] #input array\n",
+    "target_arr_test=[] #output array\n",
+    "datadir='../Dataset/train/' \n",
+    "\n",
+    "#path which contains all the categories of images\n",
+    "\n",
+    "# read train dataaaaaa\n",
+    "for i in Categories:\n",
+    "    path=os.path.join(datadir,i)\n",
+    "    for img in os.listdir(path):\n",
+    "        img_array=cv2.imread(os.path.join(path,img))\n",
+    "        img_resized=cv2.resize(img_array,(150,150))\n",
+    "        flat_data_arr.append(img_resized.flatten())\n",
+    "        target_arr.append(Categories.index(i))\n",
+    "flat_data=np.array(flat_data_arr)\n",
+    "target=np.array(target_arr)\n",
+    "\n",
+    "datadir='../Dataset/test/' \n",
+    "\n",
+    "# read train dataaaaaa\n",
+    "for i in Categories:\n",
+    "    path=os.path.join(datadir,i)\n",
+    "    for img in os.listdir(path):\n",
+    "        img_array=cv2.imread(os.path.join(path,img))\n",
+    "        img_resized=cv2.resize(img_array,(150,150))\n",
+    "        flat_data_arr_test.append(img_resized.flatten())\n",
+    "        target_arr_test.append(Categories.index(i))\n",
+    "flat_data_arr_test=np.array(flat_data_arr_test)\n",
+    "target_test=np.array(target_arr_test)\n"
    ]
   },
   {
@@ -33,28 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label_encoder = preprocessing.LabelEncoder()\n",
-    "df=df.drop(['project_id','name','desc','keywords','disable_communication','backers_count'], axis = 1)\n",
-    "df['country'].unique()\n",
-    "df['currency'].unique()\n",
-    "# Encode labels in column 'species'.\n",
-    "df['country']= label_encoder.fit_transform(df['country'])\n",
-    "df['currency']= label_encoder.fit_transform(df['currency'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "label_encoder = preprocessing.LabelEncoder()\n",
-    "df_test=df_test.drop(['project_id','name','desc','keywords','disable_communication'], axis = 1)\n",
-    "df_test['country'].unique()\n",
-    "df_test['currency'].unique()\n",
-    "# Encode labels in column 'species'.\n",
-    "df_test['country']= label_encoder.fit_transform(df_test['country'])\n",
-    "df_test['currency']= label_encoder.fit_transform(df_test['currency'])"
+    "X=flat_data\n",
+    "Y=target"
    ]
   },
   {
@@ -63,9 +77,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SVM=SVC(kernel=\"linear\")\n",
-    "X = df.drop(['final_status'] , axis = 1)\n",
-    "Y = df['final_status']"
+    "\n",
+    "X_train , y_train  = X,Y\n",
+    "X_test=flat_data_arr_test\n",
+    "y_test =target_test\n"
    ]
   },
   {
@@ -75,18 +90,27 @@
    "outputs": [],
    "source": [
     "\n",
-    "X_train , y_train  = X,Y\n",
-    "X_test=df_test.drop(['final_status'], axis = 1)\n",
-    "y_test =df_test['final_status']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "SVM.fit(X_train, y_train)"
+    "# Defining the parameters grid for GridSearchCV\n",
+    "param_grid = {\n",
+    "    'C': [0.1, 1, 10, 100],\n",
+    "    'gamma': [0.0001, 0.001, 0.1, 1],\n",
+    "    'kernel': ['rbf', 'poly', 'linear']\n",
+    "}\n",
+    "\n",
+    "# Creating a support vector classifier\n",
+    "SVM = svm.SVC(probability=True)\n",
+    "\n",
+    "# Creating a model using GridSearchCV with the parameters grid\n",
+    "grid_search = GridSearchCV(SVM, param_grid)\n",
+    "\n",
+    "# Fitting the GridSearchCV object to the data\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# Getting the best hyperparameters and the best model\n",
+    "best_params = grid_search.best_params_\n",
+    "best_model = grid_search.best_estimator_\n",
+    "best_params\n",
+    "best_model"
    ]
   },
   {
@@ -95,25 +119,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = SVM.predict(X_test)"
+    "y_pred = best_model.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.8652173913043478\n",
-      "Recall: 0.9133858267716536\n",
-      "Precision: 0.8529411764705882\n",
-      "F1_score: 0.8821292775665399\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "print('Accuracy:', accuracy)\n",
@@ -129,21 +142,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Confusion Matrix:\n",
-      "[[ 83  20]\n",
-      " [ 11 116]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cm = confusion_matrix(y_test, y_pred)\n",
     "print('Confusion Matrix:')\n",
     "print(cm)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Best Hyper parameters : \",best_params)\n",
+    "print(\"Best Model is : \",best_model)"
    ]
   }
  ],
