--- a/Classifiers/DBN.ipynb
+++ b/Classifiers/DBN.ipynb
@@ -156,6 +156,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm = confusion_matrix(y_test, y_pred)\n",
+    "ConfusionMatrixDisplay(confusion_matrix=cm).plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 179,
    "metadata": {},
    "outputs": [
